
syntax = "proto3";

package com.spotify.searchview.proto;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

message AutocompleteViewResponse {
    repeated Entity hits = 1;
    repeated AutocompleteQuery autocomplete_queries = 1000;
}

message MainViewResponse {
    repeated Entity hits = 1;
    optional Recommendations recommendations = 2;
    bytes entity_types = 3;
    optional string next_page_token = 4;
    optional BannerContent banner = 5;
    repeated RelatedSearch related_searches = 6;
    repeated AutocompleteQuery autocomplete_queries = 7;
}

message Recommendations {
    int32 type = 1;
    repeated Entity entities = 2;
}

message BannerContent {
    string id = 1;
    string title = 2;
    string desc = 3;
    string button_title = 4;
    string url = 5;
}

message RelatedSearch {
    string text = 1;
    string uri = 2;
}

message Entity {
    string uri = 1;
    string name = 2;
    string image_uri = 3;
    oneof info {
        Artist artist = 4;
        Track track = 5;
        Album album = 6;
        Playlist playlist = 7;
        Genre genre = 8;
        AudioShow show = 9;
        Profile profile = 11;
        Audiobook audiobook = 13;
        AutocompleteQuery autocomplete_query = 2046;
    }
    optional string serp_metadata = 2047;
}

message AutocompleteQuery {
    string uri = 1;
    Snippet snippet = 2;
    string chip_text = 100;
}

message Snippet {
    repeated Segment segments = 1;
}

message Segment {
    string value = 1;
    bool matched = 2;
}

message Artist {
    bool verified = 1;
}

message Album {
    repeated string artist_names = 1;
    int32 type = 2;
    int32 release_year = 3;
    int32 state = 4;
    optional .google.protobuf.Timestamp timestamp = 5;
    optional string user_country_release_iso_time = 6;
}

message Playlist {
    bool personalized = 1;
    bool owned_by_spotify = 2;
    int32 tracks_count = 3;
}

message Track {
    bool explicit = 1;
    optional bool windowed = 2;
    RelatedEntity album = 3;
    repeated RelatedEntity artists = 4;
    optional bool mogef19 = 6;
    optional bool lyrics_match = 7;
    optional OnDemand on_demand = 8;
}

message AudioShow {
    string publisher_name = 1;
    bool music_and_talk = 3;
    string category = 4;
}

message Genre {
    
}

message Profile {
    bool verified = 1;
}

message Audiobook {
    repeated string author_names = 1;
    repeated string narrator_names = 2;
    bool explicit = 3;
    .google.protobuf.Duration duration = 4;
    string desc = 5;
    Access access = 6;
}

message Access {
    string signifier = 1;
    bool unlocked = 2;
}

message RelatedEntity {
    string uri = 1;
    string name = 2;
}

message OnDemand {
    string track_uri = 1;
    string playlist_uri = 2;
}
